--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto Socialista</title>
   <link rel="stylesheet" href="./style.css" />
+
+  <!-- fontes -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300;400;900&display=swap" rel="stylesheet">
 </head>
 <body>
   
+  <header id="cabecalho">
+    <div class="logo"><a href="./"><img src="./assets/logo-pstu.png" alt=""></a></div>
+    <nav>
+      <ul id="menu-header" class="londrina-font">
+        <li><a href="./">manifesto</a></li>
+        <li><a href="./">pré-candidatos</a></li>
+        <li><a href="./">propostas</a></li>
+        <li><a href="./">agenda</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section id="intro">
+    
+  </section>
  <script src="./script.js"></script>
 </body>
 </html>
