--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </header>
 
   <section id="intro">
-    
+    <button class="londrina-font"><a href="./">Fala com a gente no whatsapp</a></button>
   </section>
  <script src="./script.js"></script>
 </body>
