> criar formulario e ver java, criar controladores de carrossel, criar agenda

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <div class="logo"><a href="./"><img src="./assets/logo-pstu.png" alt=""></a></div>
     <nav>
       <ul id="menu-header" class="londrina-font">
-        <li><a href="./">manifesto</a></li>
-        <li><a href="./">pré-candidatos</a></li>
+        <li><a href="#manifesto">manifesto</a></li>
+        <li><a href="#pre-candidatos">pré-candidatos</a></li>
         <li><a href="./">propostas</a></li>
         <li><a href="./">agenda</a></li>
       </ul>
