> fazer o formulario funcionar, criar a agenda, tornar rolagens mais suaves e adicionar candidatos

--- a/index.html
+++ b/index.html
@@ -63,9 +63,19 @@
         
         <br>Cada voto no PSTU, no 16, vai ser útil para fortalecer o projeto revolucionário e socialista e a luta da classe trabalhadora, do povo pobre, dos negros, das mulheres e LGBTs, para mudar, de verdade, tudo isso que está aí.<br></p>
     </article>
-  </div>
 
-        <!-- lembrar de colocar aqui a parte das assinaturas -->
+    <section id="assina-manifesto">
+      <h2 class="londrina-font">ASSINA O<br>MANIFESTO</h2>
+      <div class="container-form">
+      <form action="./" class="assinar-form">
+        <input type="text" placeholder="Nome completo">
+        <input type="text" placeholder="Profissão">
+        <input type="tel" placeholder="Whatsapp">
+        <button class="montserrat-font">Assinar</button>
+      </form>
+    </div>
+    </section>
+  </div>
 
   <!-- FIM DO MANIFESTO -->
 
