--- a/index.html
+++ b/index.html
@@ -64,15 +64,18 @@
         <br>Cada voto no PSTU, no 16, vai ser útil para fortalecer o projeto revolucionário e socialista e a luta da classe trabalhadora, do povo pobre, dos negros, das mulheres e LGBTs, para mudar, de verdade, tudo isso que está aí.<br></p>
     </article>
 
+    <button class="btn-quemassinou montserrat-font">veja quem assinou</button>
+
     <section id="assina-manifesto">
       <h2 class="londrina-font">ASSINA O<br>MANIFESTO</h2>
       <div class="container-form">
       <form action="./" class="assinar-form">
-        <input type="text" placeholder="Nome completo">
-        <input type="text" placeholder="Profissão">
-        <input type="tel" placeholder="Whatsapp">
+        <input type="text" id="nomeCompleto" placeholder="Nome completo">
+        <input type="text" id="profissao" placeholder="Profissão">
+        <input type="tel" id="whatsapp" placeholder="Whatsapp">
         <button class="montserrat-font">Assinar</button>
       </form>
+
     </div>
     </section>
   </div>
@@ -139,6 +142,8 @@
 
 
 
+ 
+ <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
  <script src="./script.js"></script>
 </body>
 </html>
