--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto Socialista</title>
+  <link rel="stylesheet" href="./global.css" />
   <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./responsivo.css" />
 
     <!-- londrina font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,13 +24,19 @@
   <header id="cabecalho">
     <div class="logo"><a href="./"><img src="./assets/logo-pstu.png" alt=""></a></div>
     <nav>
-      <ul id="menu-header" class="londrina-font">
+      <ul id="nav-list" class="londrina-font">
         <li><a href="#manifesto">manifesto</a></li>
         <li><a href="#pre-candidatos">pré-candidatos</a></li>
         <li><a href="./">propostas</a></li>
         <li><a href="./">agenda</a></li>
       </ul>
+      
     </nav>
+    <div class="mobile-menu">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
   </header>
   <!-- FIM DO MENU -->
 
