iniciada responsividade, terminar amanha responsividade do mobile

--- a/index.html
+++ b/index.html
@@ -73,19 +73,23 @@
     </article>
 
     <button class="btn-quemassinou montserrat-font">veja quem assinou</button>
+    <div id="listaNomes"></div>
 
+    <div class="bg-assina-manifesto">
     <section id="assina-manifesto">
       <h2 class="londrina-font">ASSINA O<br>MANIFESTO</h2>
       <div class="container-form">
-      <form action="./" class="assinar-form">
+      <form action="./" id="assinar-form">
         <input type="text" id="nomeCompleto" placeholder="Nome completo">
         <input type="text" id="profissao" placeholder="Profissão">
         <input type="tel" id="whatsapp" placeholder="Whatsapp">
-        <button class="montserrat-font">Assinar</button>
+        <button type="submit" class="montserrat-font"><a href="#">Assinar</a></button>
       </form>
 
     </div>
     </section>
+  </div>
+
   </div>
 
   <!-- FIM DO MANIFESTO -->
@@ -131,6 +135,7 @@
     </ul>
   </section>
 
+  <div class="bg-faca-parte">
   <section id="faca-parte">
     <div class="clique-aqui">
       <h2 class="cactus-font">FAÇA PARTE</h2>
@@ -145,10 +150,7 @@
       </p>
     </div>
   </section>
-
-
-
-
+</div>
 
  
  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
