> concluir responsividade amanhã

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <section id="faca-parte">
     <div class="clique-aqui">
       <h2 class="cactus-font">FAÇA PARTE</h2>
-      <button class="cactus-font"><a href="./">Clica aqui para<br>participar</a></button>
+      <button class="cactus-font"><a href="./">Clica aqui para participar</a></button>
     </div>
 
     <div class="vamos-trilhar">
