responsividade mobile encaminhada. > concluir médias responsividades e fazer carrossel

--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
 
   <!-- INTRODUÇÃO -->
   <section id="intro">
+    <div class="titulo-intro">
+    <h1 class="cactus-font">PROJETO<br>SOCIALISTA</h1>
+    <h2 class="twilight-font">Para Natal</h2>
     <button class="londrina-font"><a href="./">Fala com a gente no whatsapp</a></button>
+    </div>
   </section>
   <!-- FIM DA INTRO -->
 
