criado carrossel. > adicionar controladores depois.

--- a/index.html
+++ b/index.html
@@ -99,44 +99,41 @@
   <!-- FIM DO MANIFESTO -->
 
   <!-- CANDIDATURAS -->
-  <section id="pre-candidatos" class="container-1200">
-    <h1 class="cactus-font">PRÉ-CANDIDATOS</h1>
-    <ul class="pre-candidatos-carrossel">
+  
+  <section id="pre-candidaturas">
+    <h2 class="cactus-font">PRÉ-CANDIDATOS</h2>
 
-      <li>
+    <ul class="carrossel container-1200">
+
+      <li class="card-candidato">
         <a href="./">
-        <div class="foto-candidato"><img src="./assets/nando-poeta-card.png" alt="Nando Poeta"></div>
-        <div class="corpo-card">
-          <h2 class="montserrat-font">Pré-candidato a<br>Prefeito de Natal</h2>
-          <div class="linha-vermelha-divisao"></div>
-          <p class="descricao-candidato">sociólogo, professor da rede pública e<br>cordelista. Ele tem 61 anos e está há<br>mais de 30 anos no partido.</p>
-        </div>
+          <img src="./assets/nando-poeta-card.png" alt="">
+          <h3 class="montserrat-font">Pré-candidato a<br>Prefeito de Natal</h3>
+          <div class="linha-vermelha"></div>
+          <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
         </a>
       </li>
 
-      <li>
+      <li class="card-candidato">
         <a href="./">
-        <div class="foto-candidato"><img src="./assets/luciana-lima-card.png" alt="Luciana Lima"></div>
-        <div class="corpo-card">
-          <h2 class="montserrat-font">Pré-candidato a<br>Vice Prefeita de Natal</h2>
-          <div class="linha-vermelha-divisao"></div>
-          <p class="descricao-candidato">sociólogo, professor da rede pública e<br>cordelista. Ele tem 61 anos e está há<br>mais de 30 anos no partido.</p>
-        </div>
+          <img src="./assets/nando-poeta-card.png" alt="">
+          <h3 class="montserrat-font">Pré-candidato a<br>Prefeito de Natal</h3>
+          <div class="linha-vermelha"></div>
+          <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
         </a>
       </li>
 
-      <li>
+      <li class="card-candidato">
         <a href="./">
-        <div class="foto-candidato"><img src="./assets/tiago-silva-card.png" alt="Tiago Silva"></div>
-        <div class="corpo-card">
-          <h2 class="montserrat-font">Pré-candidato a<br>Vereador de Natal</h2>
-          <div class="linha-vermelha-divisao"></div>
-          <p class="descricao-candidato">sociólogo, professor da rede pública e<br>cordelista. Ele tem 61 anos e está há<br>mais de 30 anos no partido.</p>
-        </div>
+          <img src="./assets/nando-poeta-card.png" alt="">
+          <h3 class="montserrat-font">Pré-candidato a<br>Prefeito de Natal</h3>
+          <div class="linha-vermelha"></div>
+          <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
         </a>
       </li>
 
     </ul>
+
   </section>
 
   <div class="bg-faca-parte">
