Refeita parte de candidatos. >aguardar novas atualizações

--- a/index.html
+++ b/index.html
@@ -102,13 +102,14 @@
   
   <section id="pre-candidaturas">
     <h2 class="cactus-font">PRÉ-CANDIDATOS</h2>
+    <h3 class="cactus-font">PARA PREFEITURA</h3>
 
-    <ul class="carrossel container-1200">
+    <ul class="candidatos-pref container-1200">
 
       <li class="card-candidato">
         <a href="./">
           <img src="./assets/nando-poeta-card.png" alt="">
-          <h3 class="montserrat-font">Pré-candidato a<br>Prefeito de Natal</h3>
+          <span class="montserrat-font">Pré-candidato a Prefeito de Natal</span>
           <div class="linha-vermelha"></div>
           <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
         </a>
@@ -116,22 +117,50 @@
 
       <li class="card-candidato">
         <a href="./">
-          <img src="./assets/nando-poeta-card.png" alt="">
-          <h3 class="montserrat-font">Pré-candidato a<br>Prefeito de Natal</h3>
+          <img src="./assets/luciana-lima-card.png" alt="">
+          <span class="montserrat-font">Pré-candidata a Vice-prefeita de Natal</span>
           <div class="linha-vermelha"></div>
           <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
         </a>
       </li>
 
+    </ul>
+
+    <h3 class="cactus-font">MANDATO COLETIVO - VEREADORES</h3>
+
+    <ul class="mandato-coletivo container-1200">
       <li class="card-candidato">
         <a href="./">
-          <img src="./assets/nando-poeta-card.png" alt="">
-          <h3 class="montserrat-font">Pré-candidato a<br>Prefeito de Natal</h3>
+          <img src="./assets/alexandre-guedes-card.png" alt="">
+          <span class="montserrat-font">Pré-candidato a vereador de Natal</span>
           <div class="linha-vermelha"></div>
           <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
         </a>
       </li>
-
+      <li class="card-candidato">
+        <a href="./">
+          <img src="./assets/erica-guarani-card.png" alt="">
+          <span class="montserrat-font">Pré-candidata a vereadora de Natal</span>
+          <div class="linha-vermelha"></div>
+          <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
+        </a>
+      </li>
+      <li class="card-candidato">
+        <a href="./">
+          <img src="./assets/jose-jairan-card.png" alt="">
+          <span class="montserrat-font">Pré-candidato a vereador de Natal</span>
+          <div class="linha-vermelha"></div>
+          <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
+        </a>
+      </li>
+      <li class="card-candidato">
+        <a href="./">
+          <img src="./assets/tiago-silva-card.png" alt="">
+          <span class="montserrat-font">Pré-candidato a vereador de Natal</span>
+          <div class="linha-vermelha"></div>
+          <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
+        </a>
+      </li>
     </ul>
 
   </section>
