--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 
       <li class="card-candidato">
         <a href="./">
-          <img src="./assets/luciana-lima-card.png" alt="">
-          <span class="montserrat-font">Pré-candidata a Vice-prefeita de Natal</span>
+          <img src="./assets/tiago-silva-card.png" alt="">
+          <span class="montserrat-font">Pré-candidato a Vice-prefeito de Natal</span>
           <div class="linha-vermelha"></div>
           <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
         </a>
@@ -149,38 +149,39 @@
 
     </ul>
 
-    <h3 class="cactus-font">MANDATO COLETIVO - VEREADORES</h3>
+    <h3 class="cactus-font">PARA VEREADORES</h3>
 
     <ul class="mandato-coletivo container-1200">
+      <li class="card-candidato card-luciana">
+        <a href="./">
+          <img src="./assets/luciana-lima-card.png" alt="">
+          <span class="montserrat-font">Pré-candidata a vereadora de Natal</span>
+          <div class="linha-vermelha-luciana"></div>
+          <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
+        </a>
+      </li>
+
       <li class="card-candidato">
         <a href="./">
           <img src="./assets/alexandre-guedes-card.png" alt="">
-          <span class="montserrat-font">Pré-candidato a vereador de Natal</span>
-          <div class="linha-vermelha"></div>
+          <span class="montserrat-font">Pré-candidato a mandato coletivo</span>
+          <div class="linha-laranja"></div>
           <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
         </a>
       </li>
       <li class="card-candidato">
         <a href="./">
           <img src="./assets/erica-guarani-card.png" alt="">
-          <span class="montserrat-font">Pré-candidata a vereadora de Natal</span>
-          <div class="linha-vermelha"></div>
+          <span class="montserrat-font">Pré-candidata a mandato coletivo</span>
+          <div class="linha-laranja"></div>
           <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
         </a>
       </li>
       <li class="card-candidato">
         <a href="./">
           <img src="./assets/jose-jairan-card.png" alt="">
-          <span class="montserrat-font">Pré-candidato a vereador de Natal</span>
-          <div class="linha-vermelha"></div>
-          <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
-        </a>
-      </li>
-      <li class="card-candidato">
-        <a href="./">
-          <img src="./assets/tiago-silva-card.png" alt="">
-          <span class="montserrat-font">Pré-candidato a vereador de Natal</span>
-          <div class="linha-vermelha"></div>
+          <span class="montserrat-font">Pré-candidato a mandato coletivo</span>
+          <div class="linha-laranja"></div>
           <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
         </a>
       </li>
