atualizados candidatos. >importar o formulário

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <img src="./assets/nando-poeta-card.png" alt="">
           <span class="montserrat-font">Pré-candidato a Prefeito de Natal</span>
           <div class="linha-vermelha"></div>
-          <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
+          <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. Ele tem 61 anos e está há mais de 30 anos no partido.</p>
         </a>
       </li>
 
@@ -143,7 +143,7 @@
           <img src="./assets/tiago-silva-card.png" alt="">
           <span class="montserrat-font">Pré-candidato a Vice-prefeito de Natal</span>
           <div class="linha-vermelha"></div>
-          <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
+          <p class="montserrat-font">jornalista, estudante de teatro na UFRN, poeta e performer. Ele está no partido desde 2016.</p>
         </a>
       </li>
 
@@ -157,7 +157,7 @@
           <img src="./assets/luciana-lima-card.png" alt="">
           <span class="montserrat-font">Pré-candidata a vereadora de Natal</span>
           <div class="linha-vermelha-luciana"></div>
-          <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
+          <p class="montserrat-font">pedagoga de formação, professora da rede municipal e mãe. Iniciou sua militância no surgimento do PSTU.</p>
         </a>
       </li>
 
@@ -166,7 +166,7 @@
           <img src="./assets/alexandre-guedes-card.png" alt="">
           <span class="montserrat-font">Pré-candidato a mandato coletivo</span>
           <div class="linha-laranja"></div>
-          <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
+          <p class="montserrat-font">funcionário público do Detran/RN, coordenador licenciado do Sinai. Alexandre está no partido desde 1999.</p>
         </a>
       </li>
       <li class="card-candidato">
@@ -174,7 +174,7 @@
           <img src="./assets/erica-guarani-card.png" alt="">
           <span class="montserrat-font">Pré-candidata a mandato coletivo</span>
           <div class="linha-laranja"></div>
-          <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
+          <p class="montserrat-font">mulher indígena potiguar, formada em ciências biológicas e técnica de enfermagem concursada.</p>
         </a>
       </li>
       <li class="card-candidato">
@@ -182,7 +182,7 @@
           <img src="./assets/jose-jairan-card.png" alt="">
           <span class="montserrat-font">Pré-candidato a mandato coletivo</span>
           <div class="linha-laranja"></div>
-          <p class="montserrat-font">sociólogo, professor da rede pública e cordelista. ele tem 61 anos e está há mais de 30 anos no partido.</p>
+          <p class="montserrat-font">professor de matemática, constrói o Movimento Quilombo Raça e Classe e o Movimento Muda Sinte.</p>
         </a>
       </li>
     </ul>
