prototipo do calendario. > aguardar aprovação e resolver problemas se der

--- a/index.html
+++ b/index.html
@@ -206,6 +206,36 @@
     </section>
   </div>
 
+  <!-- AGENDA -->
+
+  <div class="container">
+    <div class="calendar">
+      <div class="eventos"><span class="montserrat-font">EVENTOS</span></div>
+        <div class="month">
+            <i class="prev">❮</i>
+            <div class="date">
+                <h1></h1>
+                <p class="montserrat-font"></p>
+            </div>
+            <i class="next">❯</i>
+        </div>
+        <div class="weekdays">
+            <div>Dom</div>
+            <div>Seg</div>
+            <div>Ter</div>
+            <div>Qua</div>
+            <div>Qui</div>
+            <div>Sex</div>
+            <div>Sáb</div>
+        </div>
+        <div class="days"></div>
+    </div>
+    <div class="agenda">
+      <div class="prox-eventos"><span class="montserrat-font">PRÓXIMOS EVENTOS</span></div>
+        <div class="events"></div>
+    </div>
+</div>
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="./script.js"></script>
